--- a/html/brander.html
+++ b/html/brander.html
@@ -11,29 +11,206 @@
             input.green {background-color:green}
             input.grey {background-color:grey}
             input.red {background-color:red}
-            button.redbutton {font-weight: 900;color: rgb(255,0,0); background-color: white; border:none}
-            button.bluebutton {font-weight: 900;color: rgb(0,0,255); background-color: white; border:none}
-            button.unknownbutton {font-weight: 900;color: lightgrey; background-color: white; border:none}
+            button.ON {font-weight: 900;color: rgb(255,0,0); background-color: white; border:none}
+            button.OFF {font-weight: 900;color: rgb(0,0,255); background-color: white; border:none}
+            button.UNKNOWN {font-weight: 900;color: lightgrey; background-color: white; border:none}
 </style>
 
 
 <input type="text" id="serverAddress" name="serverAddress" class="white" value="ws://X.X.X.X:2603">
 <button type="button" id="statusbutton" class="unknownbutton">STATUS ?</button>
+<div id="tablediv">
+<table id="schedule">
+</table>
+</div>
 <span id="statusinfo" class="userinfo"></span>
+<div id="logdiv" </div>
 
 
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
 <script>
 
+
+
+var now=new Date();
+var vandaag=now.getDate()+"/"+now.getMonth()+"/"+now.getFullYear();
+g_dagen = ["MAANDAG","DINSDAG","WOENSDAG","DONDERDAG","VRIJDAG","ZATERDAG","ZONDAG",vandaag];
+
+function setStatus(status){
+g_status=status;
+document.getElementById("statusbutton").className=status;
+document.getElementById("statusbutton").innerHTML=g_button.data;
+}
+
+document.getElementById("statusbutton").onclick = function (){
+ if (g_status=="ON") {
+  g_ws.send("SWITCHOFF");
+  g_button.data="UNKNOWN";
+  setStatus("UNKNOWN");
+ } else if (g_status=="OFF") {
+  g_ws.send("SWITCHON");
+  g_button.data="UNKNOWN";
+  setStatus("UNKNOWN");
+ } else {  // unknown
+  g_button.data="UNKNOWN";
+  g_ws.send("GETSTATUS");
+ }
+}
+
+function addInterval(data){
+  var row = document.createElement('tr');
+  g_table.appendChild(row);
+  row.data= JSON.parse(JSON.stringify(data));
+  var td;
+  var button_plus;
+  var button_minus;
+  var select_dag;
+  var select_vanuur;
+  var select_vanmin;
+  var select_totuur;
+  var select_totmin;
+
+  // + button
+  td=document.createElement('td');
+  row.appendChild(td);
+  button_plus= document.createElement('button');
+  button_plus.innerHTML="+";
+  td.appendChild(button_plus);
+  button_plus.onclick = function (){
+    addInterval(row.data);
+  }
+
+  // - button
+  td=document.createElement('td');
+  row.appendChild(td);
+  button_minus= document.createElement('button');
+  button_minus.innerHTML="-";
+  td.appendChild(button_minus);
+  button_minus.onclick = function (){
+    g_table.removeChild(row);
+  }
+
+  // dag
+  td=document.createElement('td');
+  row.appendChild(td);
+  select_dag = document.createElement('select');
+  td.appendChild(select_dag);
+  for (var i = 0; i<g_dagen.length; i++){
+    var opt = document.createElement('option');
+    select_dag.appendChild(opt);
+    opt.value = g_dagen[i];
+    opt.innerHTML = g_dagen[i];
+    if (g_dagen[i]==row.data.dag) opt.selected=true;
+  }
+  select_dag.onchange = function() {
+    row.data.dag=select_dag.value;
+    console.log(row.data);
+  }
+
+  // 
+  td=document.createElement('td');
+  row.appendChild(td);
+  td.innerHTML="van";
+
+  // van uur
+  td=document.createElement('td');
+  row.appendChild(td);
+  select_vanuur = document.createElement('select');
+  td.appendChild(select_vanuur);
+  for (var i = 0; i<=23; i++){
+    var opt = document.createElement('option');
+    select_vanuur.appendChild(opt);
+    opt.value = i;
+    opt.innerHTML = i;
+    if (row.data.vanuur==i) opt.selected=true;
+  }
+  select_vanuur.onchange = function() {
+    row.data.vanuur=select_vanuur.value;
+    console.log(row.data);
+  }
+
+  // :
+  td=document.createElement('td');
+  row.appendChild(td);
+  td.innerHTML=":";
+
+  // van minuut
+  td=document.createElement('td');
+  row.appendChild(td);
+  select_vanmin = document.createElement('select');
+  td.appendChild(select_vanmin);
+  for (var i = 0; i<=55; i=i+5){
+    var opt = document.createElement('option');
+    select_vanmin.appendChild(opt);
+    opt.value = i;
+    opt.innerHTML = i;
+    if (row.data.vanmin==i) opt.selected=true;
+  }
+  select_vanmin.onchange = function() {
+    row.data.vanmin=select_vanmin.value;
+    console.log(row.data);
+  }
+
+  // 
+  td=document.createElement('td');
+  row.appendChild(td);
+  td.innerHTML="tot";
+
+
+  // tot uur
+  td=document.createElement('td');
+  row.appendChild(td);
+  select_totuur = document.createElement('select');
+  td.appendChild(select_totuur);
+  for (var i = 0; i<=23; i++){
+    var opt = document.createElement('option');
+    select_totuur.appendChild(opt);
+    opt.value = i;
+    opt.innerHTML = i;
+    if (row.data.totuur==i) opt.selected=true;
+  }
+  select_totuur.onchange = function() {
+    row.data.totuur=select_totuur.value;
+    console.log(row.data);
+  }
+
+  // :
+  td=document.createElement('td');
+  row.appendChild(td);
+  td.innerHTML=":";
+
+  // tot minuut
+  td=document.createElement('td');
+  row.appendChild(td);
+  select_totmin = document.createElement('select');
+  td.appendChild(select_totmin);
+  for (var i = 0; i<=55; i=i+5){
+    var opt = document.createElement('option');
+    select_totmin.appendChild(opt);
+    opt.value = i;
+    opt.innerHTML = i;
+    if (row.data.totmin==i) opt.selected=true;
+  }
+  select_totmin.onchange = function() {
+    row.data.totmin=select_totmin.value;
+    console.log(row.data);
+  }
+}
+
                 // figure out ip address or host name to construct WebSocket server URL
 
                 var g_serverAddress = window.location.host.split(":", 1)[0];
                 g_serverAddress = "ws://" + g_serverAddress + ":4567";
-                g_serverAddress = "ws://192.168.0.2:4567";
                 document.getElementById('serverAddress').value=g_serverAddress;
               
                 var g_ws;
+                var g_button=document.getElementById("statusbutton");
+                var g_table=document.getElementById("schedule");
+                var g_status = "UNKNOWN";
+
+addInterval({ "dag":"MAANDAG" ,"vanuur":5,"vanmin":45,"totuur":7,"totmin":0});
+addInterval({ "dag":"DINSDAG" ,"vanuur":5,"vanmin":45,"totuur":7,"totmin":0});
 
                 function wsconnect() {
 
@@ -45,9 +222,7 @@
                         g_ws.onopen = function ()
                         {
                             document.getElementById("serverAddress").className = "green";
-                            var cmd = new Object();
-                            cmd.Command = "icons";
-                            g_ws.send(JSON.stringify(cmd));
+                            g_ws.send("GETSTATUS");
                         };
 
                         g_ws.onclose = function (evt)
@@ -63,13 +238,20 @@
                         g_ws.onmessage = function (event)
                         {
                             if (event.data.length > 0) {
-                                    console.log("onmessage : " + event.data);
+                              console.log("onmessage : " + event.data);
+                              document.getElementById("logdiv").innerHTML += event.data +"<br>\n";
                             }
-                        };
-
-                    } else
-                    {
-
+                            var message=event.data;
+                            if (message=="ON") {
+                              g_button.data=message;
+                              setStatus(message);
+                            }
+                            if (message=="OFF") {
+                              g_button.data=message;
+                              setStatus(message);
+                            }
+                        }
+                    } else {
                         alert("WebSocket NOT supported by your Browser!");
                     }
                 }
